Fixed homepage bug on mobile (oversized logo)

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -257,6 +257,10 @@ a.dropdown-item {
 
 // --- Homepage Styling ---------
 
+.homelogo {
+  max-width: 400px;
+}
+
 // New styling for jumbotron
 .hero {
   background-color: $light;
